--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,6 @@
-{
+{"files.autoSave": "afterDelay",
+"files.autoSaveDelay": 10,
+"java.debug.settings.onBuildFailureProceed": false,
+"java.configuration.updateBuildConfiguration": "interactive",
+"java.compile.nullAnalysis.mode": "automatic"
 }
